--- a/index.html
+++ b/index.html
@@ -1445,13 +1445,13 @@ a person, consider at least these factors:
 
 ## Data Rights {#data-rights}
 
-<p>
+<div class="practice">
   <span class="practicelab" id="respect-data-rights">
     [=People=] have certain rights over [=data=] that is about themselves, and these rights should
     be facilitated by their [=user agent=] and the [=parties=] that are [=processing=] their
     [=data=].
   </span>
-</p>
+</div>
 
 While data rights alone are not sufficient to satisfy all [=privacy=] principles for the Web, they
 do support self-determination and help improve accountability. Such rights include:
@@ -1486,7 +1486,7 @@ being able to exclude oneself from automated profiling. For example, some servic
 price of products (price discrimination) or offers for credit or insurance based on [=data=]
 collected about a person. Those alterations may be consequential (financially, say) and
 objectionable to people who believe those decisions based on data about them are inaccurate or
-unjust. As another example, some services may draw inferences about a user's identity, humanity or
+unjust. As another example, some services may draw inferences about a user's identity, humanity, or
 presence based on facial recognition algorithms run on camera data. Because facial recognition
 algorithms and training sets are fallible and may exhibit certain biases, people may not wish to
 submit to decisions based on that kind of automated recognition.
@@ -1524,8 +1524,8 @@ that further considerations relating to groups are covered in the
 We talk of <dfn>controlled de-identified data</dfn> when:
 1. The _state_ of the data is such that the information that could be used to re-identify an
    individual has been removed or altered, and
-2. the there is a _process_ in place to prevent attempts to re-identify [=people=] and the inadvertent
-   release of the de-identified data. [[?De-identification-Privacy-Act]]
+2. there is a _process_ in place to prevent attempts to re-identify [=people=] and the inadvertent
+   release of the de-identified data. ([[?De-identification-Privacy-Act]])
 
 Different situations involving [=controlled de-identified data=] will require different controls.
 For instance, if the [=controlled de-identified data=] is <em>only</em> being processed by one
