--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy)
 from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focuses on privacy, this should
-not be taken as an indication that privacy is necessarily more important than other ethical web principles and
+not be taken as an indication that privacy is always more important than other ethical web principles, and
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy is covered by legal frameworks and this document recognises that existing data
