--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ understanding is that the law is a floor, not a ceiling.
 
 <section class="introductory">
 
-## Audiences for this Document {#audience-for-this-document}
+## Audiences for this Document {#audience}
 
 The primary audiences for this document are
 
