--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ of all aspects of our lives both increase the power of information and decrease 
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
 the victim.
 
-These asymmetries of information and of automation create powerful asymmetries of power.
+These asymmetries of information and of automation create significant asymmetries of power.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in [=information flows=], [=data governance=] determines how
