--- a/index.html
+++ b/index.html
@@ -533,8 +533,8 @@ companies, associations, or governmental bodies, which are known as [=parties=].
 
 It is important to keep in mind that not all people are equal in how they can resist
 the imposition of unfair [=principles=]: some [=people=] are more [=vulnerable=] and therefore in greater
-need of protection. The focus of this document is on the impact that differences in information power can
-have against people, but they can also impact other [=actors=], such as companies or governments.
+need of protection. This document focuses on the impact that differences in information power can
+have on people, but those differences can also impact other [=actors=], such as companies or governments.
 
 [=Principles=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
