--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ details about such a use) and some people would identify those uses as supportin
 Aggregated or [=de-identified=] data is often more likely to be
 acceptable in these senses and often still contributes to the collective benefit while minimizing
 privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
-privacy</a>). But some people might nevertheless object, in particular instances or in general.
+privacy</a>). But some people might object anyway, in particular instances or in general.
 
 <aside class="example">
   Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
