--- a/index.html
+++ b/index.html
@@ -1262,8 +1262,8 @@ privacy</a>). But some people might object anyway, in particular instances or in
   goals and preferences about use of data about them.</span>
 </div>
 
-Agents should both be careful, cautious, and conservative in applying data minimization to any
-[=ancillary use=] and also not burden the user with additional [=privacy
+Agents should be careful, cautious, and conservative in applying data minimization to any
+[=ancillary use=], but also not burden the user with additional [=privacy
 labor=]. To that end, user agents may employ user research, solicitation of general preferences, and
 heuristics about sensitivity of data or trust in a particular context. To facilitate site
 understanding of user preferences, user agents can provide browser-configurable signals to directly
