--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@ privacy</a>). But some people might object anyway, in particular instances or in
   Force">IRTF</abbr> <a href="https://datatracker.ietf.org/rg/pearg/about/"><abbr title="Privacy
   Enhancements and Assessments Research Group">pearg</abbr></a>, and W3C <a
   href="https://patcg.github.io/"><abbr title="Private Advertising Technology Community
-  Group">PATCG</abbr></a> groups tackles relevant questions.
+  Group">PATCG</abbr></a> groups addresses relevant questions.
 </aside>
 
 <div class="practice">
