fix severity refg

--- a/index.html
+++ b/index.html
@@ -1435,8 +1435,9 @@ people.
 When considering whether a class of information is likely to be sensitive to
 a person, consider at least these factors:
 
-* whether it serves as a persistent [=identifier=] (see severity in Mitigating
-  browser fingerprinting);
+* whether it serves as a persistent [=identifier=] (see
+  [severity](https://www.w3.org/TR/fingerprinting-guidance/#identifying-fingerprinting-surface-and-evaluating-severity) in
+  [[[fingerprinting-guidance]]]);
 * whether it discloses substantial (including intimate details or inferences)
   information about the person using the system or other people;
 * whether it can be revoked (as in determining whether a permission is
