--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ not make them neutral — it means that they support the power dynamic that
 comes with permissive [=processing=]. We must therefore determine which [=principles=]
 best align with ethical Web values in Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
-<dfn data-lt='information'>Information flows</dfn> as understood in this document mean information
+<dfn data-lt='information'>Information flows</dfn> as used in this document refer to information
 exchanged or processed by [=actors=]. The information itself need not necessarily be
 [=personal data=]. Disruptive or interruptive information flowing <em>to</em> a
 person is in scope, as is [=de-identified=] [=data=] that can be used to manipulate people or that
