--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ data should be set up in such a way that it requires deliberate, specific action
 (eg. triggering a form control that is not on a modal dialog) and if that [=consent=] is persistent,
 there should be a vivid indicator that data is being transmitted shown at all times, in such a way
 that the person can easily switch it off. In general, providing [=consent=] should be rare,
-slow, highly intentional, and temporary.
+highly intentional, and temporary.
 
 When an [=opt-out=] mechanism exists, it should preferably be complemented by a
 <dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
