--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ the user with the intent of overriding their global opt-out.
 
 <dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
 the work of ensuring [=data processing=] of which they are the subject or recipient is
-[=appropriate=], instead making the [=parties=] responsible for that work.
+[=appropriate=], instead of putting the responsibility on the [=parties=] who are doing the processing.
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
