--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@ communicate common user preferences (such as a [=global opt-out=]).
 </aside>
 
 <aside class="example">
-  A user loads a mapping website that they regularly visit and clicks a locator icon; although
+  A user visits a mapping website that they use regularly and clicks a locator icon; although
   precise geolocation can be very sensitive, the user agent can readily determine the user's intent.
 </aside>
 
