--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@ page. These <dfn data-lt="ancillary use">ancillary uses</dfn> include:
   * measurement,
   * targeting,
   * operating ad auctions,
-  * personalization, or
+  * personalization, and
   * fraud prevention;
 * performance, including caching and prefetching content; or
 * software updates.
