--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ In general, collective issues in [=data=] require collective solutions. Web stan
 [=data governance=] by defining structural controls
 in [=user agents=] and establishing or delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
-increasing <em>individual</em> control instead of collective action.
+increasing <em>individual</em> control instead of by collective action.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
 emerge when [=actors=] [=process=] [=data=]
