because of that

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ and choice</i>", which, in today's digital environment, is often an indication t
 
 ## Collective Governance {#collective}
 
-Privacy [=principles=] are defined through social processes and because of that the applicable definition
+Privacy [=principles=] are defined through social processes and, because of that, the applicable definition
 of [=privacy=] in a given context can be
 contested ([[?Privacy-Contested]]). This makes privacy a problem of collective action ([[?GKC-Privacy]]).
 Group-level [=data processing=] may impact populations or individuals, including in
