--- a/index.html
+++ b/index.html
@@ -1177,8 +1177,8 @@ inappropriate information flows.
 <a>personal data</a> they transfer between parties on the Web.</span>
 </div>
 
-Data minimization limits the risks of data being disclosed or misused, and also makes it possible to
-more meaningfully provide people with understandable decisions about data about them.
+Data minimization limits the risks of data being disclosed or misused, and it also helps
+user agents more meaningfully explain the decisions their users need to make.
 
 <div class="practice">
 <span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
