--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@ Because this document guides privacy reviews of new standards, designers should 
 
 # An Introduction to Privacy on the Web {#intro}
 
+This is a document containing technical guidelines. However in order to put those guidelines in context we
+must first define some terms and explain what we mean by privacy.
+
 The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
 net positive social benefit</i>" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
 Web serves people is by protecting them in the face of asymmetries of power, and this includes
