--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ Because this document guides privacy reviews of new standards, designers should 
 
 # An Introduction to Privacy on the Web {#intro}
 
-This is a document containing technical guidelines. However in order to put those guidelines in context we
+This is a document containing technical guidelines. However, in order to put those guidelines in context we
 must first define some terms and explain what we mean by privacy.
 
 The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
