--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@ user agents more meaningfully explain the decisions their users need to make.
 
 <div class="practice">
 <span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
-to obtain to carry out their users' goals and provide granularity and user controls over <a>personal
+to request to carry out their users' goals and provide granularity and user controls over <a>personal
 data</a> that is communicated to sites.</span>
 </div>
 
