Avoid mentioning [IPA].

--- a/index.html
+++ b/index.html
@@ -964,10 +964,10 @@ principles.
 User agents can reduce the incentive to develop these alternate tracking methods by
 building APIs to facilitate the most common and least harmful uses of user profiles.
 However, those APIs usually still reveal some information about a user's behavior. For
-example, [[[IPA]]] reveals a limited amount of information about each user in order to
-replace the use of profiles to measure the success of advertising campaigns. However, even
-a small amount of information is still personal data, which the principles in [[[#data]]]
-advise against sharing.
+example, even the most privacy-respecting conversion attribution API will reveal a limited
+amount of information about each user in order to replace the use of profiles to measure
+the success of advertising campaigns. However, even a small amount of information is still
+personal data, which the principles in [[[#data]]] advise against sharing.
 
 </aside>
 
