The #data section doesn't exist anymore, so remove the reference to it.

--- a/index.html
+++ b/index.html
@@ -966,8 +966,8 @@ building APIs to facilitate the most common and least harmful uses of user profi
 However, those APIs usually still reveal some information about a user's behavior. For
 example, even the most privacy-respecting conversion attribution API will reveal a limited
 amount of information about each user in order to replace the use of profiles to measure
-the success of advertising campaigns. However, even a small amount of information is still
-personal data, which the principles in [[[#data]]] advise against sharing.
+the success of advertising campaigns. Even this small amount of information is still
+[=personal data=].
 
 </aside>
 
