--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ not be taken as an indication that privacy is always more important than other e
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
-platform exposes (or does not), and laws in the various jurisdictions where it is used. These
+platform exposes (or does not), and laws in the various jurisdictions where the Web is used. These
 regulatory mechanisms are separate; a law in one country does not (and should not) change the whole
 Web's architecture, and likewise Web specifications cannot override any given law (although they can
 affect how easy it is to create and enforce law). The Web is not merely an implementation of a
@@ -470,7 +470,7 @@ that often exceed legal requirements for privacy.
 
 However, the overall goal of privacy on the Web is served best when technology and law complement
 each other. This document seeks to establish shared concepts as an aid to technical efforts to
-regulate privacy on the web, and may also be useful in pursuing alignment with and between legal
+regulate privacy on the web. It may also be useful in pursuing alignment with and between legal
 regulatory regimes.
 
 </section>
