Refine the definition of "context" to avoid re-using "purpose".

--- a/index.html
+++ b/index.html
@@ -2089,9 +2089,8 @@ are employees with respect to their employers, are facing a steep asymmetry of p
 are people in some situations of intellectual or psychological impairment, are
 refugees, etc.
 
-A <dfn>context</dfn> is a physical or digital environment that a [=person=] interacts with
-for a set of [=purposes=] (that they typically share with other [=people=] who interact with the
-same environment).
+A <dfn>context</dfn> is a physical or digital environment in which [=people=] interact with other
+[=actors=], and which the [=people=] understand as distinct from other [=contexts=].
 
 ## Server-Side Parties {#parties}
 
@@ -2185,11 +2184,6 @@ planned outcome of this [=processing=] which is achieved or aimed for within a g
 [=context=]. A [=purpose=], when described, should be specific enough to be actionable by
 someone familiar with the relevant [=context=] (ie. they could independently determine
 [=means=] that reasonably correspond to an implementation of the [=purpose=]).
-
-<!--
-XXX given that contexts are defined from *user* purpose we might wish to have purpose in
-general and processing purpose for the above.
--->
 
 The <dfn>means</dfn> are the general method of [=data processing=] through which a given
 [=purpose=] is implemented, in a given [=context=], considered at a relatively abstract
