Cite _Code and other laws of cyberspace_.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
           authors: ['Robin Berjon', 'Justin Heideman'],
           href: 'https://nytimes.github.io/std-cat/',
         },
+        'CODE': {
+          title: 'Code and other laws of cyberspace',
+          authors: ['Lawrence Lessig'],
+          publisher: "Basic Books",
+          date: "1999",
+          href: "https://lessig.org/product/code/",
+          isbn: "9780465039128",
+        },
         'Contextual-Integrity': {
           title: 'Privacy As Contextual Integrity',
           authors: ['Helen Nissenbaum'],
@@ -461,7 +469,7 @@ not be taken as an indication that privacy is always more important than other e
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
-platform exposes (or does not), and laws in the various jurisdictions where the Web is used. These
+platform exposes (or does not), and laws in the various jurisdictions where the Web is used ([[CODE]]). These
 regulatory mechanisms are separate; a law in one country does not (and should not) change the whole
 Web's architecture, and likewise Web specifications cannot override any given law (although they can
 affect how easy it is to create and enforce law). The Web is not merely an implementation of a
