--- a/index.html
+++ b/index.html
@@ -469,12 +469,12 @@ not be taken as an indication that privacy is always more important than other e
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
-platform exposes (or does not), and laws in the various jurisdictions where the Web is used ([[CODE]]). These
-regulatory mechanisms are separate; a law in one country does not (and should not) change the whole
-Web's architecture, and likewise Web specifications cannot override any given law (although they can
-affect how easy it is to create and enforce law). The Web is not merely an implementation of a
-particular legal privacy regime; it has distinct features and guarantees driven by shared values
-that often exceed legal requirements for privacy.
+platform exposes (or does not), and laws in the various jurisdictions where the Web is used
+([[CODE]]). These regulatory mechanisms are separate; a law in one country does not (and should not)
+change the whole Web's architecture, and likewise Web specifications cannot override any given law
+(although they can affect how easy it is to create and enforce law). The Web is not merely an
+implementation of a particular legal privacy regime; it has distinct features and guarantees driven
+by shared values that often exceed legal requirements for privacy.
 
 However, the overall goal of privacy on the Web is served best when technology and law complement
 each other. This document seeks to establish shared concepts as an aid to technical efforts to
