--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
           authors: ['Robin Berjon', 'Justin Heideman'],
           href: 'https://nytimes.github.io/std-cat/',
         },
+        'CODE': {
+          title: 'Code and other laws of cyberspace',
+          authors: ['Lawrence Lessig'],
+          publisher: "Basic Books",
+          date: "1999",
+          href: "https://lessig.org/product/code/",
+          isbn: "9780465039128",
+        },
         'Contextual-Integrity': {
           title: 'Privacy As Contextual Integrity',
           authors: ['Helen Nissenbaum'],
@@ -460,12 +468,18 @@ from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focus
 not be taken as an indication that privacy is always more important than other ethical web principles, and
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
-Privacy is covered by legal frameworks and this document recognises that existing data
-protection laws take precedence on legal matters. However, because the Web is global, we
-benefit from having shared concepts to guide its evolution as a system built for the people who use it
-([[?RFC8890]]). A clear and well-defined view of privacy on the Web, informed by research,
-can hopefully help all the Web's participants in different legal regimes. Our shared
-understanding is that the law is a floor, not a ceiling.
+Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
+platform exposes (or does not), and laws in the various jurisdictions where the Web is used
+([[CODE]]). These regulatory mechanisms are separate; a law in one country does not (and should not)
+change the whole Web's architecture, and likewise Web specifications cannot override any given law
+(although they can affect how easy it is to create and enforce law). The Web is not merely an
+implementation of a particular legal privacy regime; it has distinct features and guarantees driven
+by shared values that often exceed legal requirements for privacy.
+
+However, the overall goal of privacy on the Web is served best when technology and law complement
+each other. This document seeks to establish shared concepts as an aid to technical efforts to
+regulate privacy on the web. It may also be useful in pursuing alignment with and between legal
+regulatory regimes.
 
 </section>
 
