--- a/index.html
+++ b/index.html
@@ -95,14 +95,6 @@
           authors: ['Robin Berjon', 'Justin Heideman'],
           href: 'https://nytimes.github.io/std-cat/',
         },
-        'CODE': {
-          title: 'Code and other laws of cyberspace',
-          authors: ['Lawrence Lessig'],
-          publisher: "Basic Books",
-          date: "1999",
-          href: "https://lessig.org/product/code/",
-          isbn: "9780465039128",
-        },
         'Contextual-Integrity': {
           title: 'Privacy As Contextual Integrity',
           authors: ['Helen Nissenbaum'],
@@ -242,6 +234,14 @@
           authors: ['Pete Snyder', 'Jeffrey Yasskin'],
           href: 'https://privacycg.github.io/nav-tracking-mitigations/',
           publisher: 'W3C',
+        },
+        'New-Chicago-School': {
+          title: 'The New Chicago School',
+          href: "https://www.docdroid.net/i3pUJof/lawrence-lessig-the-new-chicago-school-1998.pdf",
+          authors: ['Lawrence Lessig'],
+          publisher: "The Journal of Legal Studies",
+          date: "June 1998",
+          doi: "10.1086/468039",
         },
         'NIST-800-63A': {
           title: 'Digital Identity Guidelines: Enrollment and Identity Proofing Requirements',
@@ -470,11 +470,11 @@ this document doesn't address how to balance the different ethical web principle
 
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
 platform exposes (or does not), and laws in the various jurisdictions where the Web is used
-([[CODE]]). These regulatory mechanisms are separate; a law in one country does not (and should not)
-change the whole Web's architecture, and likewise Web specifications cannot override any given law
-(although they can affect how easy it is to create and enforce law). The Web is not merely an
-implementation of a particular legal privacy regime; it has distinct features and guarantees driven
-by shared values that often exceed legal requirements for privacy.
+([[New-Chicago-School]]). These regulatory mechanisms are separate; a law in one country does not
+(and should not) change the whole Web's architecture, and likewise Web specifications cannot
+override any given law (although they can affect how easy it is to create and enforce law). The Web
+is not merely an implementation of a particular legal privacy regime; it has distinct features and
+guarantees driven by shared values that often exceed legal requirements for privacy.
 
 However, the overall goal of privacy on the Web is served best when technology and law complement
 each other. This document seeks to establish shared concepts as an aid to technical efforts to
