Aggregation and user agent responsiblilties
Refs #165

--- a/index.html
+++ b/index.html
@@ -1277,6 +1277,10 @@ acceptable in these senses and often still contributes to the collective benefit
 privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
 privacy</a>). But some people might object anyway, in particular instances or in general.
 
+A [=user agent=] must act in the interest of the user when reporting aggregated data, and should
+not participate in sharing of aggregated data in the interests of any other [=actor=], even if
+the aggregation scheme is unlikely to reveal information about a specific user.
+
 <aside class="example">
   Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
   the number of actors that have access to personal data about many individual people. Encryption and
