Example on advertising and aggregated reporting
Refs #165

--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,12 @@ privacy</a>). But some people might object anyway, in particular instances or in
 
 A [=user agent=] must act in the interest of the user when reporting aggregated data, and should
 not participate in sharing of aggregated data in the interests of any other [=actor=], even if
-the aggregation scheme is unlikely to reveal information about a specific user.
+the aggregation scheme is unlikely to reveal information about a specific user. For example, in
+web advertising, the user has an interest in receiving the maximum value in ad-supported content
+for the lowest cost in attention, risk and computing resources, while some [=actor=]s have an
+interest in maximizing ad revenue while minimizing the cost of content.  The user agent has an
+obligation to share data in a way that advances the user's interests, not those of the other
+actors.
 
 <aside class="example">
   Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
