--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@ do support self-determination and help improve accountability. Such rights inclu
 
 This right includes both being able to review what information has been collected or inferred about
 oneself and being able to discover what [=actors=] have collected information about oneself. As a
-result, databases must not be kept secret and data collected about [=people=] must be meaningfully
+result, databases cannot be kept secret and data collected about [=people=] needs to be meaningfully
 discoverable by those people.
 
 * The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
