--- a/index.html
+++ b/index.html
@@ -1495,9 +1495,10 @@ do support self-determination and help improve accountability. Such rights inclu
 
 * The <dfn data-export="">right to access</dfn> [=data=] about oneself.
 
-This right includes being able to discover data about oneself (implying no databases are kept
-secret) and to review
-what information has been collected or inferred.
+This right includes both being able to review what information has been collected or inferred about
+oneself and being able to discover what [=actors=] have collected information about oneself. As a
+result, databases cannot be kept secret and data collected about [=people=] needs to be meaningfully
+discoverable by those people.
 
 * The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
 
